sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: '(' expected but identifier found.
      if !(plusPetit(k,k+1))
         ^